Style legal pages

--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -37,6 +37,7 @@
 @import "patterns/toggle-content";
 @import "patterns/tooltips";
 @import "patterns/announcements";
+@import "patterns/simple-page";
 
 // Modules
 // -------
