--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,10 +1,10 @@
-{% extends "base.html" %}
+{% extends "base_site.html" %}
 
 {% block title %}The K Network Privacy Policy | {{ block.super }}{% endblock %}
 
-{% block body %}
+{% block main %}
 <article class="privacy-policy">
-  <h2 class="pagehead">The K Network Privacy Policy</h2>
+  <h1 class="pagehead">Privacy Policy</h1>
   <p>
     This Privacy Policy ("Policy") describes how The K Network, Inc. ("The K Network") collects, uses and shares personal information of visitors and users of our website, including TheKNetwork.org, and other K Network owned or operated websites and online services that link to this policy (collectively, the “Sites”), and through our services and programs ("Services"). This Policy does not apply to third parties that The K Network does not own or control or to websites and/or services that display or link to different privacy statements. Websites and services linked to our Site(s) or co-branded with our partners may display or link to a joint privacy statement or separate privacy statement in addition to our Policy.
   </p>
@@ -15,12 +15,12 @@
 Notice to Minors: You must be 18 or over (or the legal age to form a binding contract in your jurisdiction if that age is greater than 18 years of age), to use our website and The K Network services. If you are under the age of 18 (or the applicable legal age in your jurisdiction), you may use our website and the The K Network services only with the involvement and consent of your parent or guardian. The K Network does not knowingly collect information from children under thed age of 13.
   </p>
 
-  <h3>What Type of Information Does The K Network Collect?</h3>
+  <h2>What Type of Information Does The K Network Collect?</h2>
 
   <ol class="information-types">
 
     <li>
-      <h4>Information You Provide to Us.</h4>
+      <h3>Information You Provide to Us.</h3>
       <p>
         We receive and store any information you enter on our Site(s) or provide to us in any other way. Examples could include:
       </p>
@@ -41,7 +41,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     </li>
 
     <li>
-      <h4>Information Automatically Collected.</h4>
+      <h3>Information Automatically Collected.</h3>
 
       <ol class="information-automatically-collected">
         <li>
@@ -63,7 +63,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     </li>
   </ol>
 
-  <h3>How May The K Network Use Information About You?</h3>
+  <h2>How May The K Network Use Information About You?</h2>
 
   <p>
     The K Network may use information about you for purposes described in this Policy or disclosed to you on our Sites or with our Services. For example, we may use information about you to:
@@ -92,7 +92,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     </li>
   </ol>
 
-  <h3>How Does The K Network Share Your Information?</h3>
+  <h2>How Does The K Network Share Your Information?</h2>
 
   <ol class="information-sharing">
 
@@ -131,7 +131,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
 
   <p>We may also share aggregated or anonymized information that does not directly identify you.</p>
 
-  <h3>Links to Other Sites and Third-party Advertisers</h3>
+  <h2>Links to Other Sites and Third-party Advertisers</h2>
 
   <p>
     The K Network website may contain links to other sites that are not owned or controlled by us. Please be aware that The K Network is not responsible for the privacy practices of such other sites. Please be aware that when you leave our Site(s) you should read the privacy statements of each and every website that collects personally identifiable information.
@@ -141,7 +141,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     The K Network may allow other companies, called third-party ad servers or ad networks, to serve advertisements to the Sites. These third-party ad servers or ad networks use technology to send, directly to your browser, the advertisements and links that appear on the Sites. They automatically receive your IP address when this happens. They may also use other technologies (such as cookies, JavaScript, or web Beacons) to measure the effectiveness of their advertisements and to personalize the advertising content you see. The K Network does not provide any personally identifiable information to these third-party ad servers or ad networks without your consent or except as part of a specific program or feature for which you will have the ability to opt-out. However, please note that if an advertiser asks The K Network to show an advertisement to a certain audience (for example, purchasers of educational goods), and you respond to that advertisement, the advertiser or ad-server may conclude that you fit the description of the audience they are trying to reach. The advertiser may also use information regarding your use of the Site(s), such as the number of times you viewed an ad (but not any personally identifiable information), to determine which ads to deliver to you. Please review the respective privacy policies of these third-party ad servers or ad networks for more information on their practices and for instructions on how to opt-out of certain practices. This Policy does not apply to, and we cannot control the activities of, such other advertisers or web sites. Any data obtained by third-party ad servers subsequently shared with The K Network is maintained and dealt with by The K Network in accordance with this Policy.
   </p>
 
-  <h3>What Choices Do We Offer About Personal Information?</h3>
+  <h2>What Choices Do We Offer About Personal Information?</h2>
 
   <p>
     The K Network offers choices for you to request to update or change your personal information and how we communicate with you. Here are some of the ways you can request changes:
@@ -163,19 +163,19 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     If you opt out of receiving promotional communications from us, we may still send you non-promotional or service related communications such as emails about your accounts or our ongoing business relations.
   </p>
 
-  <h3>How is Personal Information Secured?</h3>
+  <h2>How is Personal Information Secured?</h2>
 
   <p>
     The K Network employs industry standard steps to maintain appropriate physical, technical and administrative security to help prevent loss, misuse, unauthorized access, disclosure or modification of personal information. While we take these reasonable efforts to safeguard your personal information, no system or transmission of data over the Internet or any other public network can be guaranteed to be 100% secure. Therefore, while we strive to use commercially acceptable means to protect your personal information, we cannot guarantee its absolute security.
   </p>
 
-  <h3>Privacy Policy Updates</h3>
+  <h2>Privacy Policy Updates</h2>
 
   <p>
     We may update this Policy from time to time. When we do so, we will post the new Policy on this page and change the date at the bottom of the Policy. We encourage you to check the date of our Policy when you visit this Site for any updates or changes. We will take reasonable efforts to notify you of any modified versions of the Policy that materially affect the way we use or disclose your personal information.
   </p>
 
-  <h3> Questions and Feedback</h3>
+  <h2> Questions and Feedback</h2>
 
   <p>
     We welcome your questions, comments and concerns about privacy.
