--- a/static/css/demo.css
+++ b/static/css/demo.css
@@ -180,10 +180,18 @@ a:focus, a:hover, a:active {
 .demo ol {
   list-style: decimal;
 }
+.demo ul ul, .demo ul ol, .demo ol ul, .demo ol ol {
+  margin-left: 1.5em;
+}
+@media (max-width: 46em) {
+  .demo ul, .demo ol {
+    margin-left: 1.5em;
+  }
+}
 
 @font-face {
   font-family: "knet";
-  src: url('../fonts/knet.woff?1ac4348a28f76a96da19f4c7d892a5cc6db934e9') format("woff"), url('../fonts/knet.ttf?19df15282163cbbb3764b8efb608018d9f4bf36e') format("truetype");
+  src: url('../fonts/knet.woff?ea3e07afb11021754430b10596f37feabe85fe0e') format("woff"), url('../fonts/knet.ttf?92ba68062e26e7ab027978359f4c45e3d4b20ccf') format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -488,6 +496,7 @@ select {
   padding: 0.31944rem 0.63889rem;
   color: #dbdbdb;
   background: #4c4c4c;
+  border: 1px solid #dbdbdb;
   white-space: nowrap;
   display: none;
 }
