Add site footer

--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -5,5 +5,6 @@
   @include container;
   @include background-origin(content-box);
   @include background-clip(content-box);
+  @include calc(min-height, '100% - #{rhythm(4.1)}');
   padding: rhythm(1) 1em;
 }
