--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -35,4 +35,10 @@
 <div role="main">
   {% block main %}{% endblock %}
 </div>
+
+<footer role="contentinfo">
+  <span class="license">Copyright &copy; 2013 <strong>The K Network</strong></span>
+  <a href="/terms/">Terms of Service</a>
+  <a href="/privacy/">Privacy Policy</a>
+</footer>
 {% endblock %}
