--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -17,7 +17,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
 
   <h2>What Type of Information Does The K Network Collect?</h2>
 
-  <ol class="information-types">
+  <ul class="information-types">
 
     <li>
       <h3>Information You Provide to Us.</h3>
@@ -25,7 +25,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
         We receive and store any information you enter on our Site(s) or provide to us in any other way. Examples could include:
       </p>
 
-      <ol class="information-you-provide">
+      <ul class="information-you-provide">
         <li>
           If you create an account or download software, we may collect your username, password, name, postal address, phone number, e-mail address, and mobile phone number.
         </li>
@@ -37,13 +37,13 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
         <li>
           If you take a survey or interact with us in various other ways, we may collect demographics information and information about subjects that may interest you.
         </li>
-      </ol>
+      </ul>
     </li>
 
     <li>
       <h3>Information Automatically Collected.</h3>
 
-      <ol class="information-automatically-collected">
+      <ul class="information-automatically-collected">
         <li>
           We may automatically collect website use information when you visit our Sites. This information may include information about your Internet service provider, your operating system, browser type, domain name, Internet protocol (IP) address, your access times, the website that referred you to us, the Web pages you request, and the date and time of those requests. We may use software tools to measure and collect session information, including page response times, download errors, length of visits to certain pages, page interaction information (such as scrolling, clicks, and mouse-overs), and methods used to browse away from the page. Our collection of website use information may involve the use of cookies and Web beacons. Cookies are small data files stored on your hard drive by a website. Among other things, cookies help us improve our Sites and your experience. We use cookies to see which areas and features are popular and to count visits to our Sites. Web beacons are electronic images that may be used on our Sites or in our emails. We use Web beacons to deliver cookies, count visits, understand usage and campaign effectiveness and to tell if an email has been opened and acted upon.
         </li>
@@ -55,13 +55,13 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
         <li>
           We may also collect technical information to help us identify your device for fraud prevention and diagnostic purposes.
         </li>
-      </ol>
+      </ul>
 
       <p>
         The K Network may also collect aggregated data or anonymized data that does not directly identify you.
       </p>
     </li>
-  </ol>
+  </ul>
 
   <h2>How May The K Network Use Information About You?</h2>
 
@@ -69,7 +69,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     The K Network may use information about you for purposes described in this Policy or disclosed to you on our Sites or with our Services. For example, we may use information about you to:
   </p>
 
-  <ol class="information-use">
+  <ul class="information-use">
 
     <li>
       Process and manage your purchases, donations and use/or of our Services, including your accounts and program participation.
@@ -90,11 +90,11 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     <li>
       Communicate with you about our Services, fund raising, events or other promotional purposes, including co-branded offers and affiliate and partner offers.
     </li>
-  </ol>
+  </ul>
 
   <h2>How Does The K Network Share Your Information?</h2>
 
-  <ol class="information-sharing">
+  <ul class="information-sharing">
 
     <li>
       <strong>The K Network Personnel.</strong> The K Network personnel and authorized consultants and/or contractors may have access to user information if necessary in the normal course of The K Network’s business. We store information that we collect through cookies, log files, clear gifs, and/or third party sources to create a “profile” of your preferences.  We tie personally identifiable information, and your purchasing history, to information in the profile, in order to provide tailored promotions and marketing offers and to improve the content of the Site(s) for you.  We share your profile in aggregate form only.
@@ -127,7 +127,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     <li>
       <strong>With Your Consent.</strong> Except as noted above, we will contact you when your personal information is shared with third parties or used for a purpose incompatible with the purpose(s) for which it was originally collected, and you will be able to opt out to prevent the sharing of this information.
     </li>
-  </ol>
+  </ul>
 
   <p>We may also share aggregated or anonymized information that does not directly identify you.</p>
 
@@ -147,7 +147,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     The K Network offers choices for you to request to update or change your personal information and how we communicate with you. Here are some of the ways you can request changes:
   </p>
 
-  <ol class="personal-information-choices">
+  <ul class="personal-information-choices">
     <li>
       Follow the opt-out instructions in promotional emails we send you.
     </li>
@@ -157,7 +157,7 @@ Notice to Minors: You must be 18 or over (or the legal age to form a binding con
     <li>
       Call 1-212-625-1833
     </li>
-  </ol>
+  </ul>
 
   <p>
     If you opt out of receiving promotional communications from us, we may still send you non-promotional or service related communications such as emails about your accounts or our ongoing business relations.
