Use {% url %} for footer links.

--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -38,7 +38,7 @@
 
 <footer role="contentinfo">
   <span class="license">Copyright &copy; 2013 <strong>The K Network</strong></span>
-  <a href="/terms/">Terms of Service</a>
-  <a href="/privacy/">Privacy Policy</a>
+  <a href="{% url 'terms_of_service' %}">Terms of Service</a>
+  <a href="{% url 'privacy_policy' %}">Privacy Policy</a>
 </footer>
 {% endblock %}
