--- a/templates/base.html
+++ b/templates/base.html
@@ -34,10 +34,8 @@
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
   {% endblock mobile-optimized %}
 
-  <!--iOS. Delete if not required -->
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-startup-image" href="{{ STATIC_URL }}images/favicons/splash.png">
+  <!-- favicon.ico -->
+  <link rel="shortcut icon" href="{{ STATIC_URL }}images/favicon.ico" />
 
   {% block styles %}
   {% compressed_css "screen" %}
