remove old/inaccurate meta tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,16 +8,13 @@
 
   <!-- Page Info -->
   <title>{% block title %}The K Network{% endblock %}</title>
-  <meta name="description" content="{% block description %}Teachers, use your computer to text parents in seconds. Free. Simple. Organized.{% endblock description %}" />
+  <meta name="description" content="{% block description %}Lets teachers collect inspiring stories from parents and students about how they have changed lives and made a difference{% endblock description %}" />
 
   <!-- Site Info -->
   {% block robots %}<meta name="robots" content="index, follow" />{% endblock %}
   <meta name="author" content="The K Network" />
   <meta name="keywords" content="education teacher student story inspiration mentor" />
   <meta name="language" content="en-us" />
-  <meta name="description" content="Lets teachers collect inspiring stories from parents and students about how they have changed lives and made a difference" />
-
-  <meta name="p:domain_verify" content="5deb9fa05f1845e9f0ffca0716b22c6c" />
 
   <!-- Microformat Profiles -->
   <!-- hCard, hCalendar, rel-license, rel-tag, XOXO, XFN, VoteLinks -->
