--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% extends "base_site.html" %}
+
 {% load accounts teachers %}
 
 {% block main %}
@@ -30,7 +31,7 @@
       </header>
     </article>
 
-    {% if ENABLE_LOGIN %}
+    {% if ENABLE_LOGIN and not user.is_authenticated %}
       <a href="{% oauth_authorize_url request login_next|default:request.path %}" class="fb-login">Login with Facebook to get started!</a>
     {% endif %}
   </section>
