code review cleanup

--- a/templates/home.html
+++ b/templates/home.html
@@ -36,12 +36,12 @@
     {% endif %}
   </section>
 
-  <section class="landing-footer">
+  <footer class="landing-footer">
     <p class="tax-exempt">
      <strong>The K Network</strong> is a tax-exempt 501(c)(3) nonprofit.
      Any donations are tax-deductible as allowed by law (tax ID 46-5167493).
    </p>
-  </section>
+  </footer>
 
   <header class="landing-header">
     <h1 class="logo">The K Network.</h1>
