--- a/templates/base_site.html
+++ b/templates/base_site.html
@@ -38,7 +38,7 @@
 
 <footer role="contentinfo">
   <span class="license">Copyright &copy; 2013 <strong>The K Network</strong></span>
-  <span class="email">support(put the 'at' sign here)theknetwork.org</span>
+  <a href="support(put the 'at' sign here)theknetwork.org" class="email">support(put the 'at' sign here)theknetwork.org</a>
   <span class="phone">212.625.1833</span>
   <a href="{% url 'terms_of_service' %}">Terms of Service</a>
   <a href="{% url 'privacy_policy' %}">Privacy Policy</a>
