move tcs to tcs/

--- a/templates/terms_of_service.html
+++ b/templates/terms_of_service.html
@@ -1,4 +1,4 @@
-{% extends "base_site.html" %}
+{% extends "base_tcs.html" %}
 
 {% block title %}Terms of Service | {{ block.super }}{% endblock %}
 
@@ -6,7 +6,7 @@
 <article class="terms-of-service" id="tos">
   <h1 class="pagehead">Terms of Service</h1>
   <p>
-    Thank you for your interest in The K Network, a 501(c)(3) organization, which operates the web site and online services located at <a href="{% url 'landing' %}">http://www.theknetwork.org</a> and all related domains, websites, services and pages owned or operated by The K Network (collectively the “<em>Website</em>”). The following Terms of Service for the Website is a legal contract (collectively, the “<em>Agreement</em>”) between you, i.e. an individual subscriber, customer, member, or user (“You”), and The K Network regarding your use of the Website. Visitors and users of the Website are referred to individually as “User” and collectively as “Users”.
+    Thank you for your interest in The K Network, a 501(c)(3) organization, which operates the web site and online services located at <a href="http://www.theknetwork.org">http://www.theknetwork.org</a> and all related domains, websites, services and pages owned or operated by The K Network (collectively the “<em>Website</em>”). The following Terms of Service for the Website is a legal contract (collectively, the “<em>Agreement</em>”) between you, i.e. an individual subscriber, customer, member, or user (“You”), and The K Network regarding your use of the Website. Visitors and users of the Website are referred to individually as “User” and collectively as “Users”.
   </p>
 
   <p>
@@ -164,7 +164,7 @@
         <li>
           <h3>Crediting The K Network</h3>
           <p>
-            The Creative Commons License requires attribution to The K Network in association with Your use of the Licensed Educational Content. Accordingly, if You distribute, publicly perform or display, transmit, publish, or otherwise make available any Licensed Educational Content, You must also provide the following notice prominently along with the Licensed Educational Content: <em>[NOTE: All The K Network content is available for free at <a href="{% url 'landing' %}">http://www.theknetwork.org</a>]</em>
+            The Creative Commons License requires attribution to The K Network in association with Your use of the Licensed Educational Content. Accordingly, if You distribute, publicly perform or display, transmit, publish, or otherwise make available any Licensed Educational Content, You must also provide the following notice prominently along with the Licensed Educational Content: <em>[NOTE: All The K Network content is available for free at <a href="http://www.theknetwork.org">http://www.theknetwork.org</a>]</em>
           </p>
         </li>
       </ol>
