--- a/templates/create_profile.html
+++ b/templates/create_profile.html
@@ -1,4 +1,4 @@
-{% extends "base_site.html" %}
+{% extends "base_tcs.html" %}
 
 {% block title %}Create a Profile | {{ block.super }}{% endblock %}
 
