--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base_site.html" %}
+{% extends "base_tcs.html" %}
 
 {% load accounts teachers %}
 
@@ -8,7 +8,7 @@
     <h1 class="cta-title"><b>Inspiring stories</b> from the lives you've changed.</h1>
 
     <article class="story published public">
-      <a href="/teacher/sample/" class="sample-icon">
+      <a href="/tcs/teacher/sample/" class="sample-icon">
         See a sample teacher profile!
       </a>
 
