Re-arrange templates

--- a/templates/demo.html
+++ b/templates/demo.html
@@ -1,4 +1,4 @@
-{% extends "base_site.html" %}
+{% extends "layout.html" %}
 {% load compressed %}
 
 {% block title %}What's Possible | {{ block.super }}{% endblock %}
