--- a/templates/privacy_policy.html
+++ b/templates/privacy_policy.html
@@ -1,4 +1,4 @@
-{% extends "base_tcs.html" %}
+{% extends "layout.html" %}
 
 {% block title %}The K Network Privacy Policy | {{ block.super }}{% endblock %}
 
