--- a/templates/stories/teacher_detail.html
+++ b/templates/stories/teacher_detail.html
@@ -1,4 +1,4 @@
-{% extends "base_tcs.html" %}
+{% extends "stories/layout.html" %}
 
 {% load markup stories accounts %}
 
@@ -8,7 +8,7 @@
 <article class="teacher-detail">
 
   {# Teacher Info #}
-  {% include "_teacher_info.html" %}
+  {% include "stories/_teacher_info.html" %}
 
   {# Story Form #}
   {% if user.is_authenticated %}
@@ -24,7 +24,7 @@
     </span>
   </label>
 
-  {% include "_add_story_form.html" %}
+  {% include "stories/_add_story_form.html" %}
 
   {% elif ENABLE_LOGIN and not user.is_authenticated %}
   <a href="{% oauth_authorize_url request login_next|default:request.path %}" class="fb-login">
@@ -38,7 +38,7 @@
   {# Stories #}
   <section class="teacher-stories" data-teacher="{{ teacher.user.id }}" data-teacher-name="{{ teacher }}" data-user="{{ user.id }}" data-url="{% if user == teacher.user %}{{ BASE_URL }}{% url 'teacher_detail' username=user.username %}{% endif %}">
     {% for story in teacher|stories_visible_to:user %}
-    {% include "_story.html" %}
+    {% include "stories/_story.html" %}
     {# if empty, msg inserted via js #}
     {% endfor %}
   </section>
