--- a/templates/stories/layout.html
+++ b/templates/stories/layout.html
@@ -26,3 +26,13 @@
   {% endif %}
 </nav>
 {% endblock %}
+
+{% block footer %}
+<footer role="contentinfo">
+  <span class="license">Copyright &copy; 2013 <strong>The K Network</strong></span>
+  <a href="mailto:support(put the 'at' sign here)theknetwork.org" class="email">support(put the 'at' sign here)theknetwork.org</a>
+  <span class="phone">212.625.1833</span>
+  <a href="{% url 'terms_of_service' %}">Terms of Service</a>
+  <a href="{% url 'privacy_policy' %}">Privacy Policy</a>
+</footer>
+{% endblock footer %}
