--- a/templates/stories/terms_of_service.html
+++ b/templates/stories/terms_of_service.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "stories/layout.html" %}
 
 {% block title %}Terms of Service | {{ block.super }}{% endblock %}
 
