--- a/sass/demo.scss
+++ b/sass/demo.scss
@@ -41,6 +41,23 @@ $container: null;
   padding: rhythm(1) 1em;
 }
 
+$footer-base: color($base light);
+
+[role="contentinfo"] {
+  @extend %banner-layout;
+  @extend %banner-colors;
+  @include adjust-font-size-to($smallpx);
+  @include leading-border(1px,.5);
+  clear: both;
+  color: $footer-base;
+
+  strong { font-weight: bold; }
+  a, .phone {
+    display: inline-block;
+    @include before(' | ') { color: $footer-base; }
+  }
+}
+
 // Headers
 // -------
 
