--- a/templates/stories/privacy_policy.html
+++ b/templates/stories/privacy_policy.html
@@ -1,4 +1,4 @@
-{% extends "layout.html" %}
+{% extends "stories/layout.html" %}
 
 {% block title %}The K Network Privacy Policy | {{ block.super }}{% endblock %}
 
